--- a/src/pages/weather-api/weather-api.html
+++ b/src/pages/weather-api/weather-api.html
@@ -1,4 +1,6 @@
+<ion-content>
 <ion-tabs>
     <ion-tab [root]="weatherRoot" tabTitle="Weather" tabIcon="information-circle"></ion-tab>
     <ion-tab [root]="forecastRoot" tabTitle="Forecast" tabIcon="information-circle"></ion-tab>
 </ion-tabs>
+</ion-content>
